--- a/app/views/antigen/v2/global-registration/address-person-1-option-2.html
+++ b/app/views/antigen/v2/global-registration/address-person-1-option-2.html
@@ -62,7 +62,7 @@
                   <strong class="govuk-!-font-size-19">Select an address</strong>
                 </label>
                 <select class="govuk-select" id="gp-address-person-1" name="gp-address-person-1">
-                  <option>5 addresses found</option>
+                  <option>Select from 5 addresses</option>
                   <option value="1 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}</option>
                   <option value="2 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}</option>
                   <option value="3 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}">3 Souterhead Road, London, {{ data['gp-postcode-person-1'] or 'LS1 3BE' }}</option>
@@ -136,7 +136,7 @@
 
   function buttonClicked2(target) {
     setTimeout(function () {
-      document.getElementById('gp-address-person-1').value = '5 addresses found'
+      document.getElementById('gp-address-person-1').value = 'Select from 5 addresses'
       document.getElementById('content-2').style.display = 'none'
       document.getElementById('content-3').style.display = 'block'
       document.getElementById('gp-postcode-person-1').focus()
