--- a/app/views/antigen/v2/global-registration/address.html
+++ b/app/views/antigen/v2/global-registration/address.html
@@ -44,6 +44,10 @@
               </label>
               <input class="govuk-input govuk-input--width-10" id="gp-postcode" name="gp-postcode" type="text" autocomplete="postal-code" value="{{ data['gp-postcode'] }}" autofocus>
             </div>
+            <p class="govuk-body">
+              <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">Enter address manually</a>
+            </p>
+            <button id="find-address" class="govuk-button" type="submit" data-module="govuk-button">Find address</button>
           </div>
 
           <div id="content-2" style="display: none;">
@@ -59,7 +63,7 @@
               </span>
             <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
               <strong>Postcode</strong><br><br>
-              {{ data['gp-postcode'] | default('LS1 3BE') }}
+              <strong>{{ data['gp-postcode'] | default('LS1 3BE') }}</strong>
               <a href="/antigen/{{version}}/global-registration/address-option-2" class="govuk-!-margin-left-5">
                 <strong>Change</strong>
                 <span class="govuk-visually-hidden">your postcode</span>
@@ -70,7 +74,7 @@
                 <strong class="govuk-!-font-size-19">Select an address</strong>
               </label>
               <select class="govuk-select" id="gp-address" name="gp-address">
-                <option>5 addresses found</option>
+                <option>Select from 5 addresses</option>
                 <option value="1 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}</option>
                 <option value="2 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}</option>
                 <option value="3 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}">3 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}</option>
@@ -79,14 +83,17 @@
               </select>
             </div>
             <p class="govuk-body">
-              <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">I cannot find my address in the list</a>
+              <a class="govuk-link govuk-!-font-size-19" id="manual-address-2" role="button" href="#">I cannot find the address in the list</a>
             </p>
+            <button id="button-hidden" class="govuk-button govuk-!-margin-top-4" type="submit" data-module="govuk-button">
+              Continue
+            </button>
           </div>
 
           <div id="content-3" style="display: none;">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                Enter the address registered with the person's GP
+                Enter the address registered with {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s GP
               </h1>
             </legend>
     
@@ -126,15 +133,12 @@
               </label>
               <input class="govuk-input govuk-input--width-10" id="gp-postcode-manual" name="gp-postcode-manual" type="text" autocomplete="postal-code" value="{{ data['gp-postcode-manual'] }}">
             </div>
+            <button id="button-hidden" class="govuk-button govuk-!-margin-top-4" type="submit" data-module="govuk-button">
+              Continue
+            </button>
           </div>
 
         </fieldset>
-
-        <button id="find-address" class="govuk-button" type="submit" data-module="govuk-button">Find address</button>
-
-        <button id="button-hidden" class="govuk-button govuk-!-margin-top-4" style="display:none" type="submit" data-module="govuk-button">
-          Continue
-        </button>
 
       </form>
 
@@ -147,8 +151,8 @@
   function buttonClicked(target) {
     setTimeout(function () {
       document.getElementById('content-1').style.display = 'none'
-      document.getElementById('find-address').style.display = 'none'
-      document.getElementById('button-hidden').style.display = 'block'
+      // document.getElementById('find-address').style.display = 'none'
+      // document.getElementById('button-hidden').style.display = 'block'
       document.getElementById('content-2').style.display = 'block'
       document.getElementById('gp-address').focus()
     }, 100)
@@ -156,7 +160,8 @@
 
   function buttonClicked2(target) {
     setTimeout(function () {
-      document.getElementById('gp-address').value = '5 addresses found'
+      document.getElementById('gp-address').value = 'Select from 5 addresses'
+      document.getElementById('content-1').style.display = 'none'
       document.getElementById('content-2').style.display = 'none'
       document.getElementById('content-3').style.display = 'block'
       document.getElementById('home-postcode').focus()
@@ -166,6 +171,7 @@
   function submitEvent() {
     var selects = document.getElementById('find-address')
     var selectedLink = document.getElementById('manual-address')
+    var selectedLink2 = document.getElementById('manual-address-2')
     selects.addEventListener('click', function (event) {
       event.preventDefault()
       if (selects.getAttribute('disabled') === 'disabled') {
@@ -180,6 +186,14 @@
       } else {
         event.preventDefault()
         buttonClicked2(selectedLink)
+      }
+    })
+    selectedLink2.addEventListener('click', function (event) {
+      event.preventDefault()
+      if (selectedLink2.getAttribute('disabled') === 'disabled') {
+      } else {
+        event.preventDefault()
+        buttonClicked2(selectedLink2)
       }
     })
     
