--- a/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
@@ -58,7 +58,7 @@
             {% if data['gp-address-same-person-1'] !== "No" %}
               {% if data['gp-address-same'] !== "No" %}
               <dd class="govuk-summary-list__value">
-                {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+                {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                   {{ data['home-address'] }}
                 {% else %}
                   {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -67,7 +67,7 @@
               </dd>
               {% else %}
               <dd class="govuk-summary-list__value">
-                {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                   {{ data['gp-address'] }}
                 {% else %}
                   {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
@@ -77,7 +77,7 @@
               {% endif %}
             {% else %}
               <dd class="govuk-summary-list__value">
-                {% if data['gp-address-person-1'] and data['gp-address-person-1'] !== "5 addresses found" %}
+                {% if data['gp-address-person-1'] and data['gp-address-person-1'] !== "Select from 5 addresses" %}
                   {{ data['gp-address-person-1'] }}
                 {% else %}
                   {{ data['address-line-1-gp-person-1'] or '5 Souterhead Road'}}<br>
