--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -58,7 +58,7 @@
             Home address
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
               {{ data['home-address'] }}
             {% else %}
               {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -78,7 +78,7 @@
           </dt>
           {% if data['gp-address-same'] !== "No" %}
           <dd class="govuk-summary-list__value">
-            {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
               {{ data['home-address'] }}
             {% else %}
               {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -87,7 +87,7 @@
           </dd>
           {% else %}
           <dd class="govuk-summary-list__value">
-            {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+            {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
               {{ data['gp-address'] }}
             {% else %}
               {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
@@ -427,7 +427,7 @@
             </dt>
             <dd class="govuk-summary-list__value">
               {{ data['delivery-address-postcode'] }}
-              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
               {{ data['delivery-address-antibody'] }}
               {% else %}
                 {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
