--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers-person-1.html
@@ -55,7 +55,7 @@
             {% if data['gp-address-same-person-1'] !== "No" %}
               {% if data['gp-address-same'] !== "No" %}
               <dd class="govuk-summary-list__value">
-                {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+                {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                   {{ data['home-address'] }}
                 {% else %}
                   {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -64,7 +64,7 @@
               </dd>
               {% else %}
               <dd class="govuk-summary-list__value">
-                {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                   {{ data['gp-address'] }}
                 {% else %}
                   {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
@@ -74,7 +74,7 @@
               {% endif %}
             {% else %}
               <dd class="govuk-summary-list__value">
-                {% if data['gp-address-person-1'] and data['gp-address-person-1'] !== "5 addresses found" %}
+                {% if data['gp-address-person-1'] and data['gp-address-person-1'] !== "Select from 5 addresses" %}
                   {{ data['gp-address-person-1'] }}
                 {% else %}
                   {{ data['address-line-1-gp-person-1'] or '5 Souterhead Road'}}<br>
@@ -404,7 +404,7 @@
 
               {{ data['delivery-address-person-1-postcode'] }}
 
-              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
               {{ data['delivery-address-antibody'] }}
               {% else %}
                 {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
