--- a/app/views/antigen/v2/global-registration/find-address-gp.html
+++ b/app/views/antigen/v2/global-registration/find-address-gp.html
@@ -51,7 +51,7 @@
                 <strong class="govuk-!-font-size-24">Select an address</strong>
               </label>
               <select class="govuk-select" id="home-address" name="home-address">
-                <option>5 addresses found</option>
+                <option>Select from 5 addresses</option>
                 <option value="1 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}</option>
                 <option value="2 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}</option>
                 <option value="3 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}">3 Souterhead Road, London, {{ data['home-postcode'] or 'LS1 3BE' }}</option>
