--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -30,17 +30,17 @@
             </legend>
             <span id="fingerprick-test-hint" class="govuk-body">
               <strong>The antibody test will help the NHS learn more about who's had the virus more than once, and how it has spread.</strong><br><br>
-              What they need to know:<br><br>
+              <strong class="govuk-!-font-size-24">What they need to know</strong><br><br>
               <ul class="govuk-list govuk-list--bullet">
                 <li>They will only be sent an antibody test if they test positive for coronavirus.</li>
-                <li>They will receive 2 antibody tests in the post to their home address.</li>
-                <li>The antibody test is a 'fingerprick' blood test.</li>
-                <li>They do the test on themselves at home (they can ask a friend or relative to help)</li>
+                <li>They will receive 2 antibody tests in the post 3 weeks apart to their home address.</li>
+                <li>The antibody test is a ‘fingerprick’ blood test.</li>
+                <li>They do the test on themselves at home.</li>
+                <li>The completed antibody tests have to be posted back. They can leave home to post a test kit while self-isolating.</li>
               </ul>
-              They will receive full instructions on how to return the completed antibody tests.
-            </span><br><br><br>
+            </span>
             
-            <details class="govuk-details govuk-!-margin-bottom-2" data-module="govuk-details">
+            <details class="govuk-details govuk-!-margin-bottom-2 govuk-!-margin-top-8" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
                   Video: How to collect your blood sample
@@ -53,7 +53,7 @@
               </div>
             </details>
 
-            <details class="govuk-details" data-module="govuk-details">
+            <details class="govuk-details govuk-!-margin-bottom-7" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
                   Video transcript: What is a fingerprick test
