--- a/app/views/antigen/v2/global-registration/gp-address-same.html
+++ b/app/views/antigen/v2/global-registration/gp-address-same.html
@@ -36,8 +36,8 @@
 
         <div id="content-1">
           <span id="post-code-hint" class="govuk-body">
-            <strong class="govuk-!-font-size-24">
-              {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            <strong class="govuk-!-font-size-27">
+              {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                 {{ data['home-address'] }}
               {% else %}
                 {{ data['address-line-1'] or '5 Souterhead Road'}}, 
@@ -51,7 +51,7 @@
               {% endif %}
             </strong><br><br>
             This will help us find and update the GP record with their test results.<br><br>
-            If you're not registered with a GP in the UK, that's OK. Select "I don't know".
+            <strong>If they're not registered with a GP in the UK, that's OK. Select "I don't know".</strong>
           </span>
           <div class="govuk-radios govuk-!-margin-top-5 govuk-!-margin-bottom-7">
             <div class="govuk-radios__item">
