--- a/app/views/antigen/v2/order-home-test-kit/delivery-postcode-option-2.html
+++ b/app/views/antigen/v2/order-home-test-kit/delivery-postcode-option-2.html
@@ -56,7 +56,7 @@
                 <strong class="govuk-!-font-size-19">Select an address</strong>
               </label>
               <select class="govuk-select" id="delivery-address" name="delivery-address">
-                <option>5 addresses found</option>
+                <option>Select from 5 addresses</option>
                 <option value="1 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}</option>
                 <option value="2 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}</option>
                 <option value="3 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}">3 Souterhead Road, London, {{ data['delivery-address-postcode'] or 'LS1 3BE' }}</option>
@@ -128,7 +128,7 @@
 
   function buttonClicked2(target) {
     setTimeout(function () {
-      document.getElementById('delivery-address').value = '5 addresses found'
+      document.getElementById('delivery-address').value = 'Select from 5 addresses'
       document.getElementById('content-2').style.display = 'none'
       document.getElementById('content-3').style.display = 'block'
       document.getElementById('delivery-address-postcode').focus()
