--- a/app/views/antigen/v2/order-home-test-kit/order-summary.html
+++ b/app/views/antigen/v2/order-home-test-kit/order-summary.html
@@ -45,7 +45,7 @@
             Delivery address
           </dt>
           <dd class="govuk-summary-list__value">
-              {% if data['delivery-address-same'] and data['delivery-address'] !== '5 addresses found' %}
+              {% if data['delivery-address-same'] and data['delivery-address'] !== 'Select from 5 addresses' %}
                 {{ data['delivery-address'] or '5 Souterhead Road, London, LS1 3BE'}}
               {% else %}
                 {{ data['delivery-address-line-1'] or '5 Souterhead Road' }}<br>
@@ -81,7 +81,7 @@
         <li>I agree with the <a href="#">Terms and conditions</a> and <a href="#">Privacy policy</a> of this service</li>
         <li>I am happy to be contacted about my order</li>
         <li>I'll aim to return the kit within 48 hours</li>
-        <li>If I test positive, and I have agreed to do so, I will take part in antibody testing</li>
+        <!-- <li>If I test positive, and I have agreed to do so, I will take part in antibody testing</li> -->
       </ul>
 
       <div class="govuk-form-group">
