--- a/app/views/antigen/v2/site-appointment-booking/confirmation.html
+++ b/app/views/antigen/v2/site-appointment-booking/confirmation.html
@@ -115,7 +115,7 @@ set version = "v2" %}
       <li>a copy of your test site pass (and passes for any children getting a test) - have the QR code in the pass ready to display (on the email, printed off or as a screenshot) or it could delay your entry to the test site</li>
       <li>photo ID - a driving licence or passport for each person getting a test</li>
       <li>hand sanitiser or antiseptic wipes - because we may ask you to do the test yourself, so you'll need clean hands</li>
-      <!-- <li>face coverings for each person aged 3 years and over, if you are visiting a walk-through site</li> -->
+      <li>face coverings for each person aged 3 years and over, if you are visiting a walk-through site</li>
     </ul>
 
     <p class="govuk-body">You may also want to bring a bottle of water, as we cannot provide water at the test site.</p>
@@ -142,13 +142,13 @@ set version = "v2" %}
       <li>you can ask for a staff member to guide you as you do the test yourself</li>
     </ul>
 
-    <div class="govuk-warning-text govuk-!-margin-top-7">
+    <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text govuk-!-font-size-19">
         <span class="govuk-warning-text__assistive">Warning</span>
         At a walk-through test site everyone must wear a face covering, even if they are normally exempt, except children under the age of 3 (or under the age of 5 in Scotland).
       </strong>
-    </div>
+    </div> -->
 
     <h3 class="govuk-heading-s">At drive-through sites:</h3>
     <ul class="govuk-list govuk-list--bullet">
@@ -176,16 +176,16 @@ set version = "v2" %}
 
     <h3 class="govuk-heading-m">Antibody testing</h3>
     <p class="govuk-body">
-      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. It is safe to leave home to post your test while you're self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
+      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. You can leave home to post a test kit while self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
     </p>
 
-    <h2 class="govuk-heading-m">Do you need a BSL interpreter?</h2>
+    <!-- <h2 class="govuk-heading-m">Do you need a BSL interpreter?</h2>
 
-    <p class="govuk-body">If you are Deaf and need a BSL interpreter during your drive-through test, <a href="#">download the free InterpreterNow app</a> before you appointment.</p>
+    <p class="govuk-body">If you are Deaf and need a BSL interpreter during your drive-through test, <a href="#">download the free InterpreterNow app</a> before you appointment.</p> -->
 
-    <h2 class="govuk-heading-m">We want to hear from you</h2>
+    <h2 class="govuk-heading-m">Help us improve our service</h2>
 
-    <p class="govuk-body"><a class="govuk-link govuk-!-margin-right-2" href="#">What did you think of our service?</a> (takes 3 minutes)</p>
+    <p class="govuk-body"><a class="govuk-link govuk-!-margin-right-2" href="#">Fill in our short survey</a> (takes 3 minutes)</p>
 
   </div>
 </div>
