--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers.html
@@ -55,7 +55,7 @@
             First line of address and postcode
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
               {{ data['home-address'] }}
             {% else %}
               {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -75,7 +75,7 @@
           </dt>
           {% if data['gp-address-same'] !== "No" %}
           <dd class="govuk-summary-list__value">
-            {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
               {{ data['home-address'] }}
             {% else %}
               {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
@@ -84,7 +84,7 @@
           </dd>
           {% else %}
           <dd class="govuk-summary-list__value">
-            {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+            {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
               {{ data['gp-address'] }}
             {% else %}
               {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
@@ -397,7 +397,7 @@
             </dt>
             <dd class="govuk-summary-list__value">
               {{ data['delivery-address-postcode'] }}
-              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+              {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
               {{ data['delivery-address-antibody'] }}
               {% else %}
                 {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
