--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/delivery-address.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/delivery-address.html
@@ -37,14 +37,14 @@
           <span id="post-code-hint" class="govuk-body">
             <strong class="govuk-!-font-size-24">
               {% if data['gp-address-same'] !== "No" %}
-                {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+                {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                   {{ data['home-address'] }}
                 {% else %}
                   {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
                   {{ data['home-postcode'] or 'LS1 3BE' }}
                 {% endif %}
               {% else %}
-                {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                   {{ data['gp-address'] }}
                 {% else %}
                   {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
