--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/delivery-postcode.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/delivery-postcode.html
@@ -61,7 +61,7 @@
                 <strong class="govuk-!-font-size-19">Select an address</strong>
               </label>
               <select class="govuk-select" id="delivery-address-antibody" name="delivery-address-antibody">
-                <option>5 addresses found</option>
+                <option>Select from 5 addresses</option>
                 <option value="1 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}</option>
                 <option value="2 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}</option>
                 <option value="3 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}">3 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}</option>
@@ -145,7 +145,7 @@
 
   function buttonClicked2(target) {
     setTimeout(function () {
-      document.getElementById('delivery-address-antibody').value = '5 addresses found'
+      document.getElementById('delivery-address-antibody').value = 'Select from 5 addresses'
       document.getElementById('content-2').style.display = 'none'
       document.getElementById('content-3').style.display = 'block'
       document.getElementById('delivery-address-postcode-antibody').focus()
