--- a/app/views/antigen/v2/global-registration/gp-address-same-person-1.html
+++ b/app/views/antigen/v2/global-registration/gp-address-same-person-1.html
@@ -40,9 +40,9 @@
 
         <div id="content-1">
           <span id="post-code-hint" class="govuk-body">
-            <strong class="govuk-!-font-size-24">
+            <strong class="govuk-!-font-size-27">
               {% if data['gp-address-same'] !== "No" %}
-                {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+                {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                   {{ data['home-address'] }}
                 {% else %}
                   {{ data['address-line-1'] or '5 Souterhead Road'}}, 
@@ -55,7 +55,7 @@
                   {{ data['home-postcode-manual'] or 'LS1 3BE' }}
                 {% endif %}
               {% else %}
-                {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                   {{ data['gp-address'] }}
                 {% else %}
                   {{ data['address-line-1-gp'] or '5 Souterhead Road'}}, 
@@ -70,7 +70,7 @@
             {% endif %}
             </strong><br><br>
             This will help us find and update the GP record with their test results.<br><br>
-            If you're not registered with a GP in the UK, that's OK. Select "I don't know".
+            <strong>If they're not registered with a GP in the UK, that's OK. Select "I don't know".</strong>
           </span>
           <div class="govuk-radios govuk-!-margin-top-5 govuk-!-margin-bottom-7">
             <div class="govuk-radios__item">
@@ -83,6 +83,12 @@
               <input class="govuk-radios__input" id="gp-address-same-person-1-2" name="gp-address-same-person-1" type="radio" value="No" {{ checked("gp-address-same-person-1", "No") }}>
               <label class="govuk-label govuk-radios__label" for="gp-address-same-person-1-2">
                 No
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="gp-address-same-person-1-3" name="gp-address-same-person-1" type="radio" value="I don't know" {{ checked("gp-address-same-person-1", "I don't know") }}>
+              <label class="govuk-label govuk-radios__label" for="gp-address-same-person-1-3">
+                I don't know
               </label>
             </div>
           </div>
