--- a/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
+++ b/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
@@ -36,8 +36,8 @@
 
         <div id="content-1">
           <span id="post-code-hint" class="govuk-body">
-            <strong class="govuk-!-font-size-24">
-                {% if data['home-address'] and data['home-address'] !== "5 addresses found" %}
+            <strong class="govuk-!-font-size-27">
+                {% if data['home-address'] and data['home-address'] !== "Select from 5 addresses" %}
                   {{ data['home-address'] }}
                 {% else %}
                   {{ data['address-line-1'] or '5 Souterhead Road'}}<br>
