--- a/app/views/antigen/v2/site-appointment-booking/confirmation-email.html
+++ b/app/views/antigen/v2/site-appointment-booking/confirmation-email.html
@@ -24,7 +24,7 @@
        <img src="/public/images/QR_code.png" alt="randox number" style="height: 20%; width: 20%;" />
      </div>
 
-     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center;">Pass ID: 7VC6-Y241-AQJT-ZAYD-56RU</p>
+     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center;">Pass ID: 12653234356</p>
      
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
@@ -80,19 +80,19 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>a copy of your test site pass (and passes for any children getting a test) - have the QR code in the pass ready to display (on the email, printed off or as a screenshot) or it could delay your entry to the test site</li>
       <li>photo ID - a driving licence or passport for each person getting a test</li>
-      <li>hand-sanitiser or antiseptic wipes - because we may ask you to do the test yourself, so you'll need clean hands</li>
+      <li>hand sanitiser or antiseptic wipes - because we may ask you to do the test yourself, so you'll need clean hands</li>
       <li>face coverings for each person aged 3 years and over, if you are visiting a walk-through site</li>
     </ul>
 
     <p class="govuk-body">You may also want to bring a bottle of water, as we cannot provide water at the test site.</p>
 
-    <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
+    <div class="govuk-warning-text govuk-!-margin-top-7">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text govuk-!-font-size-19">
         <span class="govuk-warning-text__assistive">Warning</span>
         If you have symptoms, you and everyone you live with should <a target="blank" class="govuk-link" href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">self-isolate</a> immediately and not leave home until you get your test results. You can leave home to get or post a test.
       </strong>
-    </div> -->
+    </div>
 
     <h2 class="govuk-heading-m">What happens at the test site</h2>
 
@@ -106,7 +106,7 @@
 
     <p class="govuk-body">You'll stay in your vehicle or testing bay during your visit.</p>
 
-    <p class="govuk-body">Depending on which site you go to, you'll either be asked to do the test yourself (with instructions) or an assistant will do the swab test for you. Staff will let you know which test you'll be doing when you arrive at the test site.</p>
+    <p class="govuk-body">Depending on which site you go to, you’ll either be asked to do the test yourself (with instructions) or an assistant will do the swab test for you. Staff will let you know which test you’ll be doing when you arrive at the test site.</p>
 
     <p class="govuk-body">
       Watch these videos to see what happens at the test sites.<br>
@@ -114,9 +114,12 @@
       <a class="govuk-link" href="#">Learn about walk-through sites.</a>
     </p>
 
-    <p class="govuk-body">It usually takes no more than 10 minutes to perform the test. You'll receive your test results by text message a day or two later.</p>
+    <p class="govuk-body">It usually takes no more than 10 minutes to perform the test.  You may have to wait to be tested, but you would not usually be at the test centre for more than an hour.</p>
 
-    <p class="govuk-body">At some walk-through sites, you'll be given a test that gives your results while you wait. If this test is positive, you will be asked to take a follow-up test straight away which will be sent to a lab to confirm your results.</p>
+    <p class="govuk-body">
+      You'll receive your test results by text message. Most people get their result the next day, but it may take up to 3 days.<br><br>
+      If you do not get your result by day 6, call the coronavirus testing contact centre on 119. The contact centre is open from 7am to 11pm.
+    </p>
 
     <h2 class="govuk-heading-m">If you're bringing a baby or a child</h2>
 
@@ -130,18 +133,23 @@
 
     <p class="govuk-body">You may want to bring something to keep your child entertained while you read and then swab yourself.</p>
 
+    <h3 class="govuk-heading-m">Antibody testing</h3>
+    <p class="govuk-body">
+      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. You can leave home to post a test kit while self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
+    </p>
+
     <h2 class="govuk-heading-m">Do you need a BSL interpreter?</h2>
 
     <p class="govuk-body">If you are Deaf and need a BSL interpreter during your drive-through test, <a href="#">download the free InterpreterNow app</a> before you appointment.</p>
 
-    <h3 class="govuk-heading-m">Antibody testing</h3>
-    <p class="govuk-body">
-      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. It is safe to leave home to post your test while you're self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
-    </p>
 
     <h2 class="govuk-heading-m">Can you help the NHS?</h2>
 
     <p class="govuk-body">If you are over 50 and recently developed coronavirus symptoms, you may be able to take part in a clinical trial. <a href="#">Find out more and check if you qualify</a>.</p>
+
+    <h2 class="govuk-heading-m">Help us improve our service</h2>
+
+    <p class="govuk-body"><a class="govuk-link govuk-!-margin-right-2" href="#">Fill in our short survey</a> (takes 3 minutes)</p>
 
     </div>
   </div>
